feat: remove code smell